[project]
name = "lvglgdb"
version = "0.1.1"
description = "LVGL GDB scripts"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy~=2.2.6",
    "Pillow~=11.3.0",
    "prettytable~=3.16.0",
]

[project.urls]
Homepage = "https://lvgl.io"
Documentation = "https://docs.lvgl.io/master/debugging/gdb_plugin.html"
Repository = "https://github.com/lvgl/lvgl"
